--- a/CoursePathwayMaker/packages.config
+++ b/CoursePathwayMaker/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net48" />
+  <package id="Selenium.Support" version="3.141.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="78.0.3904.7000" targetFramework="net461" />
 </packages>
