update: -added db save option -added test project

--- a/CoursePathwayMaker/App.config
+++ b/CoursePathwayMaker/App.config
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+
+	<appSettings>
+		<add key="provider" value="System.Data.SqlClient"/>
+
+		<add key="connectionString" value="Data Source=OBO110-3XMB0J2;Integrated Security=True"/>
+		<add key="homeConnectionString" value="Data Source=desktop-evv8td2;Initial Catalog=UonStudentPathways;Integrated Security=True;Pooling=False"/>
+	</appSettings>
+	
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>
